fixed display issues on mobile and cleaned up css

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
 @import url("https://fonts.googleapis.com/css?family=Oleo+Script");
 
 .App {
-  width: 100%;
   height: 100%;
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
   background-color: var(--background-main);
-  min-width: 500px;
-  /* padding-bottom: 100px; */
+  color: var(--not-black);
+  box-sizing: border-box;
 }
 
 .in-progress {
   color: red;
   font-weight: bold;
   margin: 20px auto;
+  text-align: center;
 }
